# oscoin-parity-wasm-prototype

./: .gitignore  Cargo.toml  README.md
.buildkite/: pipeline.yaml
.circleci/: config.yml
ci/: .dockerignore  .gitignore  Dockerfile  build  run.sh
ci/base-image/: Dockerfile
client/: Cargo.toml
client/src/: lib.rs
deploy/: Cargo.toml
deploy/src/: lib.rs
dev-node/: chainspec.json  config.toml  dev-key.json  run
docs/: spec.rs
examples/: project-registration.rs
ledger/: Cargo.toml
ledger-spec/: Cargo.toml
ledger-spec/src/: error.rs  lib.rs  types.rs
ledger/pwasm/: Cargo.toml
ledger/pwasm/src/: lib.rs
ledger/src/: interface.rs  lib.rs  pwasm.rs  storage.rs
ledger/src/storage/: global.rs  mod.rs
src/: deploy.rs
tests/: end_to_end.rs
tools/: build-ledger-wasm  run-node  test
