[package]
name = "oscoin"
version = "0.1.0"
authors = [
  "Alexandre Baldé <alexandre@monadic.xyz>",
  "Thomas Scholtes <thomas@monadic.xyz>"
]
edition = "2018"

[dependencies]
oscoin_client = { path = "./client" }
oscoin_deploy = { path = "./deploy" }

clap = "2.31"
env_logger = "0.6.2"
futures = "0.1.28"
hex = "0.3.1"
# We require the patches https://github.com/tomusdrw/rust-web3/pull/242
# and https://github.com/tomusdrw/rust-web3/pull/250
# Once a new version of web3 is released we can update it.
web3 = { git = "https://github.com/tomusdrw/rust-web3.git", rev = "db4443ee16765c0754a87d9359d8f6b9e0c04d3a" }

[dev-dependencies]
# See https://github.com/paritytech/wasm-utils/pull/132
pwasm-utils-cli = { git = "https://github.com/oscoin/wasm-utils.git", branch = "pack-min-pages" }

[workspace]
members = ["deploy", "ledger", "ledger-spec", "ledger/pwasm"]
