[package]
name = "oscoin_client"
description = "Client library for talking to the oscoin ledger running on a full node."
version = "0.1.0"
authors = ["Thomas Scholtes <thomas@monadic.xyz>"]
edition = "2018"

[dependencies]
oscoin_ledger = { path = "../ledger" }

ethabi = "8.0.0"
ethereum-types = "^0.6.0"
futures = "0.1.28"
rustc-hex = "2.0.1"
serde = "1.0"
serde_cbor = "=0.10.0"
web3 = "0.8.0"
