[package]
name = "oscoin_deploy"
description = "Tools to deploy the oscoin ledger to a node"
version = "0.1.0"
authors = ["Thomas Scholtes <thomas@monadic.xyz>"]
edition = "2018"

[dependencies]
env_logger = "0.6.2"
hex = "0.3.1"
clap = "2.31"
# We require the patches https://github.com/tomusdrw/rust-web3/pull/242
# and https://github.com/tomusdrw/rust-web3/pull/250
# Once a new version of web3 is released we can update it.
web3 = { git = "https://github.com/tomusdrw/rust-web3.git", rev = "db4443ee16765c0754a87d9359d8f6b9e0c04d3a" }
