[package]
name = "oscoin_deploy"
description = "Tools to deploy the oscoin ledger to a node"
version = "0.1.0"
authors = ["Thomas Scholtes <thomas@monadic.xyz>"]
edition = "2018"

[dependencies]
env_logger = "0.6.2"
hex = "0.3.1"
clap = "2.31"
# We require the patches https://github.com/tomusdrw/rust-web3/pull/242
# and https://github.com/tomusdrw/rust-web3/pull/250
# Once a new version of web3 is released we can update it.
web3 = { git = "https://github.com/tomusdrw/rust-web3.git", rev = "48267cbb5f7d86fe777a07566fe2cbb1102f2ed1" }
