[package]
name = "oscoin_ledger"
version = "0.1.0"
authors = [
  "Alexandre Baldé <alexandre@monadic.xyz>",
  "Thomas Scholtes <thomas@monadic.xyz>"
]
edition = "2018"

[dependencies]
pwasm-std = "0.13"
pwasm-ethereum = "0.8"
pwasm-abi = "0.2"
pwasm-abi-derive = "0.2"
lazy_static = "1.3.0"

[dev-dependencies.pwasm-test]
git = "https://github.com/paritytech/pwasm-test"

[lib]
crate-type = ["cdylib"]

[features]
std = ["pwasm-std/std", "pwasm-ethereum/std"]
