[package]
name = "oscoin_ledger"
version = "0.1.0"
authors = [
  "Alexandre Baldé <alexandre@monadic.xyz>",
  "Thomas Scholtes <thomas@monadic.xyz>"
]
edition = "2018"

[dependencies]
pwasm-std = "0.13"
pwasm-ethereum = "0.8"
pwasm-abi = "0.2"
lazy_static = { version = "1.3.0", features = ["spin_no_std"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }

[dependencies.serde_cbor]
# See https://github.com/oscoin/oscoin-parity-wasm-prototype/pull/45
git = "https://github.com/pyfisch/cbor.git"
rev = "2c7ed27f0ecf89cdf2883586ad40dde1f216df6e"
default-features = false
features = ["alloc"]

[features]
default = ["std"]
std = [
  "pwasm-std/std",
  "pwasm-ethereum/std",
  "serde_cbor/std",
  "serde/std",
  ]
# If enabled panics will provide the formatted message to the Wasm
# runtime. This simplifies debugging.
panic_with_msg = [ "pwasm-std/panic_with_msg" ]
